--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1> - Jokenpô - </h1>
     <h3>Jogador:</h3>
-        <img src="pedra.png" alt="Pedra"
+        <img src="assets/pedra.png" alt="Pedra"
         width="100px">
-        <img src="papel.png" alt="Papel"
+        <img src="assets/papel.png" alt="Papel"
         width="100px">
-        <img src="tesoura.png" alt="Tesoura"
+        <img src="assets/tesoura.png" alt="Tesoura"
         width="100px">
         <form name="frmJokenpo">
             <input type="radio" name="grupo" id="pedra"> Pedra
@@ -26,7 +26,7 @@
         </form>
         <hr>
         <h3>Computador: </h3>
-        <img src="computador.jpg" alt="PC" id="pc"
+        <img src="assets/computador.jpg" alt="PC" id="pc"
         width="250px">
         <hr>
         <h3 id="placar"></h3>
